--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW3</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <form class="search-form">
+    <input type="text" id="search-box" placeholder="Search images..." />
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+      <button type="submit" class="button">Search</button>
+    </form>
 
-    <load src="./partials/footer.html" />
+    <div class="gallery"></div>
+    <button type="button" class="load-more">Load more</button>
+    <div class="loader">
+      <p>Loading, please wait...</p>
+    </div>
 
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
