--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,15 @@
 
   <body>
     <form class="search-form">
-    <input type="text" id="search-box" placeholder="Search images..." />
-
-      <button type="submit" class="button">Search</button>
+      <div class="input-container">
+        <input
+          id="search-box"
+          type="text"
+          placeholder="Search images..."
+        />
+        <button class="button" type="submit">Search</button>
+      </div>
     </form>
-
     <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
     <div class="loader">
